--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
     <p style="text-align:center">
         <small>
             <i>Sponsored by ACM and Korean Institute of Smart Media</i><br>
-            <i>Hosted by BK21 Convergence Engineering for Intelligent Drone, Sejong University & BK21 FAST Artificial Intelligence Convergence Center, Gachon University</i>
+            <i>Hosted by BK21 Convergence Engineering for Intelligent Drone, Sejong University</i>
         </small>
     </p>
 </body>
