--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,8 @@
 <hr>
     <p style="text-align:center">
         <small>
-            <i>Sponsored by ACM and Korean Institute of Smart Media</i><br>
-            <i>Hosted by BK21 Convergence Engineering for Intelligent Drone, Sejong University</i>
+            <i>Sponsored by To be announced.</i><br>
+            <i>Hosted by National Kaohsiung University of Science and Technology</i>
         </small>
     </p>
 </body>
