--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
 <hr>
     <p style="text-align:center">
         <small>
-            <i>Sponsored by To be announced.</i><br>
+            <i>Sponsored by Association for Computing Machinery</i><br>
             <i>Hosted by National Kaohsiung University of Science and Technology</i>
         </small>
     </p>
