--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,8 @@
 <hr>
     <p style="text-align:center">
         <small>
-            <i>Sponsored by Association for Computing Machinery</i><br>
-            <i>Hosted by National Kaohsiung University of Science and Technology</i>
+            <i>Sponsored by Association for Computing Machinery (ACM)</i><br>
+            <i>Hosted by National Kaohsiung University of Science and Technology (NKUST)</i>
         </small>
     </p>
 </body>
