--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,9 @@
 <hr>
     <p style="text-align:center">
         <small>
-            <i>Sponsored by Association for Computing Machinery (ACM)</i><br>
-            <i>Hosted by National Kaohsiung University of Science and Technology (NKUST)</i>
+            <!--<i>Sponsored by Association for Computing Machinery (ACM)</i><br>--!>
+            <i>Hosted by National Kaohsiung University of Science and Technology (NKUST)</i><br>
+            <i>The Proceedings Will be Published in the ACM International Conference Proceedings Series (ICPS)</i>
         </small>
     </p>
 </body>
